--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,8 @@ jobs:
       - name: Set up java
         uses: actions/setup-java@v2
         with:
+          distribution: 'zulu'
+          java-package: jdk
           java-version: ${{ matrix.java }}
       - name: Cache Gradle
         uses: actions/cache@v2.1.4
